-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0
-
None
import QtQuick import QtQuick.Window import QtMultimedia Window { width: 640 height: 480 visible: true SoundEffect { source: "any.wav" } }
(for some valid any.wav file) works but on launch produces the error message
audio device has unknown channel 4294967295
about 200 times, completely cluttering up the application output. It seems something pointless is being re-tried excessively, which can't be good for startup performance. This happens in both debug and release modes. Worked fine in Qt5, have not checked Qt6 versions below 6.4.
- is duplicated by
-
QTBUG-115092 macOS: QMediaDevices::defaultAudioOutput() floods the output with warnings
-
- Closed
-
- relates to
-
QTBUG-113256 [macOS] Warnings when connecting/disconnecting AirPods
-
- Closed
-
-
QTBUG-129694 [macOS] "Channel layout uses unimplemented format" Qt warnings
-
- Closed
-
For Gerrit Dashboard: QTBUG-107678 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
441070,4 | Fix redundant warning output on macOS | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
441412,2 | Fix redundant warning output on macOS | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |