Fix redundant warning output on macOS

Redundant warnings were reproduced with specific installed sowtware,
e.g. Soundflower. The software is able to create 64 audio channels and
customize them. Basically, all the channels have unknown label,
so we should filter the warnings.

The logic of channels detection is not changed: only a little bit
refactored.

See dump of audio channels on client's PC:
bugreports.qt.io/secure/attachment/132568/dump_audio_res2.txt

Pick-to: 6.4
Task-number: QTBUG-107678
Change-Id: I85b63d39b71aa09b28d47bf5bf7d40d1e8a1328b
Reviewed-by: Doris Verria <doris.verria@qt.io>